// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染TabHeader 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 1rem;
  color: rgba(0,0,0,0.87);
  white-space: nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid rgba(0,0,0,0.12);
}

.c2 {
  position: absolute;
  bottom: 0;
  left: 0;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  height: 2px;
  background-color: #3f51b5;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.35,0,0.25,1);
  -webkit-transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
  overflow-x: scroll;
}

.c1::-webkit-scrollbar {
  display: none;
}

<div
  className="c0 sinoui-tab-header"
  role="tablist"
>
  <div
    className="c1 sinoui-tab-list"
    onScroll={[Function]}
  >
    <div
      className="sinoui-tab-label"
    >
      标签内容1
    </div>
    <div
      className="sinoui-tab-label sinoui-tab-label-active"
    >
      标签内容2
    </div>
    <div
      className="c2 sinoui-ink-bar"
      data-testid="inkbar"
    />
  </div>
</div>
`;

exports[`附加内容 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 1rem;
  color: rgba(0,0,0,0.87);
  white-space: nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid rgba(0,0,0,0.12);
}

.c2 {
  position: absolute;
  bottom: 0;
  left: 0;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  height: 2px;
  background-color: #3f51b5;
}

.c3 {
  line-height: 48px;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.35,0,0.25,1);
  -webkit-transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
  overflow-x: scroll;
}

.c1::-webkit-scrollbar {
  display: none;
}

<div
  className="c0 sinoui-tab-header"
  role="tablist"
>
  <div
    className="c1 sinoui-tab-list"
    onScroll={[Function]}
  >
    <div
      className="sinoui-tab-label"
    >
      标签内容1
    </div>
    <div
      className="sinoui-tab-label sinoui-tab-label-active"
    >
      标签内容2
    </div>
    <div
      className="c2 sinoui-ink-bar"
      data-testid="inkbar"
    />
  </div>
  <div
    className="c3 sinoui-tab-header__extra-content"
  >
    <div>
      附加内容
    </div>
  </div>
</div>
`;
